lab-4-kubernetes-ingress/k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nathansegers/nginx-kubernetes
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: ingress
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
