lab-4-kubernetes-ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  namespace: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: svc-default-backend
      port:
        number: 80
  rules:
    - host: nginx.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 80
    - host: vue.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-vue-app
                port:
                  number: 80
